# CantinaComposer

./: .gitignore  CMakeLists.txt  README.md
cmake/: InstallVST3.cmake
docs/: README.md
include/: AudioBufferQueue.hpp  PluginEditor.hpp  PluginProcessor.hpp  SynthVoice.hpp
include/UI/: CustomLookAndFeel.hpp  StaticWaveformVisualizer.hpp  WaveformVisualizer.hpp
src/: PluginEditor.cpp  PluginProcessor.cpp  SynthVoice.cpp
src/UI/: CustomLookAndFeel.cpp  StaticWaveformVisualizer.cpp  WaveformVisualizer.cpp
